src/objects/Expense_Report__c.object
<CustomObject>
    <fields>
        <fullName>Billed_Date__c</fullName>
        <formula>IF( Billed__c = true, TODAY(), date(1900,01,01) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This  will be auto-populated when Billed Flag is checked.</inlineHelpText>
        <label>Billed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This Flag tells you whether this Expense Report has been Billed to the End client or not.</inlineHelpText>
        <label>Billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>ExternalId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friday_s_Total_Expense__c</fullName>
        <label>Friday&apos;s Total Expense</label>
        <summarizedField>Expense_Line_Item__c.Friday_s_Expense__c</summarizedField>
        <summaryForeignKey>Expense_Line_Item__c.Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Expense Reports</relationshipLabel>
        <relationshipName>Expense_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monday_s_Total_Expenses__c</fullName>
        <label>Monday&apos;s Total Expenses</label>
        <summarizedField>Expense_Line_Item__c.Monday_s_Expense__c</summarizedField>
        <summaryForeignKey>Expense_Line_Item__c.Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payment_1__c</fullName>
        <label>Payment 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Payment for this Expense Report has been received from End Client</inlineHelpText>
        <label>Payment Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Team_Member__c</fullName>
        <label>Project Team Member</label>
        <referenceTo>Project_Member__c</referenceTo>
        <relationshipLabel>Expense Reports</relationshipLabel>
        <relationshipName>Expense_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Expense Reports</relationshipLabel>
        <relationshipName>Expense_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Saturday_s_Total_Expense__c</fullName>
        <label>Saturday&apos;s Total Expense</label>
        <summarizedField>Expense_Line_Item__c.Saturday_s_Expense__c</summarizedField>
        <summaryForeignKey>Expense_Line_Item__c.Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_of_Week__c</fullName>
        <label>Start of Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Awaiting Client Payments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sunday_s_Total_Expense__c</fullName>
        <label>Sunday&apos;s Total Expense</label>
        <summarizedField>Expense_Line_Item__c.Sunday_s_Expense__c</summarizedField>
        <summaryForeignKey>Expense_Line_Item__c.Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <formula>Tasks__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tasks__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tasks</label>
        <referenceTo>Project_Task__c</referenceTo>
        <relationshipLabel>Expense Reports</relationshipLabel>
        <relationshipName>Expense_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Thursday_s_Total_Expense__c</fullName>
        <label>Thursday&apos;s Total Expense</label>
        <summarizedField>Expense_Line_Item__c.Thursday_s_Expense__c</summarizedField>
        <summaryForeignKey>Expense_Line_Item__c.Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tuesday_s_Total_Expenses__c</fullName>
        <label>Tuesday&apos;s Total Expenses</label>
        <summarizedField>Expense_Line_Item__c.Tuesday_s_Expense__c</summarizedField>
        <summaryForeignKey>Expense_Line_Item__c.Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Wednesday_s_Total_Expense__c</fullName>
        <label>Wednesday&apos;s Total Expense</label>
        <summarizedField>Expense_Line_Item__c.Wednesday_s_Expense__c</summarizedField>
        <summaryForeignKey>Expense_Line_Item__c.Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Expense Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_of_Week__c</columns>
        <columns>Status__c</columns>
        <columns>Billed__c</columns>
        <columns>Billed_Date__c</columns>
        <columns>Payment_Received__c</columns>
        <columns>Description__c</columns>
        <columns>Project_Team_Member__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Billed__c</columns>
        <columns>Project__c</columns>
        <columns>Project_Team_Member__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Ready for Payment</label>
    </listViews>
    <listViews>
        <fullName>Open_Billable_Expense</fullName>
        <columns>NAME</columns>
        <columns>Start_of_Week__c</columns>
        <columns>Status__c</columns>
        <columns>Billed__c</columns>
        <columns>Billed_Date__c</columns>
        <columns>Description__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Rejected,On Hold,New,Awaiting Client Payments</value>
        </filters>
        <label>Open Billable Expense</label>
    </listViews>
    <listViews>
        <fullName>Open_Expenses</fullName>
        <columns>NAME</columns>
        <columns>Start_of_Week__c</columns>
        <columns>Status__c</columns>
        <columns>Project__c</columns>
        <columns>Billed__c</columns>
        <columns>Billed_Date__c</columns>
        <columns>Description__c</columns>
        <columns>Payment_Received__c</columns>
        <columns>Tasks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected,On Hold,New,Awaiting Client Payments</value>
        </filters>
        <label>Open Expenses</label>
    </listViews>
    <listViews>
        <fullName>Paid</fullName>
        <columns>NAME</columns>
        <columns>Billed__c</columns>
        <columns>Billed_Date__c</columns>
        <columns>Description__c</columns>
        <columns>Project__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Paid</value>
        </filters>
        <label>Paid</label>
    </listViews>
    <listViews>
        <fullName>Sobia_Khan</fullName>
        <columns>NAME</columns>
        <columns>Start_of_Week__c</columns>
        <columns>Project__c</columns>
        <columns>Billed__c</columns>
        <columns>Billed_Date__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Gitika Sharma</label>
    </listViews>
    <nameField>
        <displayFormat>ER-{0000}</displayFormat>
        <label>Expense Report Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Reports</pluralLabel>
    <recordTypes>
        <fullName>New</fullName>
        <active>true</active>
        <label>New</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Record</fullName>
        <active>true</active>
        <label>New Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>Saved_Expense_Report</fullName>
        <active>true</active>
        <label>Saved Expense Report</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>